<resources>
    <string name="app_name">SmartTimetable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Розклад занять</string>
    <string name="nav_header_subtitle">ЛНУ ім. Тараса Шевченка</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="bNoConnection">Відсутність мережі...</string>

    <!-- Main Drewer -->
    <string name="menu_home">Головна</string>
    <string name="menu_all_lessons">Заняття</string>
    <string name="menu_user_lessons">Ваші заняття</string>
    <string name="menu_setting">Налаштування</string>
    <string name="menu_timetable">Розклад</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- Home Fragment -->
    <string name="tv_TodayLessons">Заняття сьогодні</string>
    <string name="tv_NextLessonTimeLeft">Часу залишилося</string>
    <string name="tv_NextLesson">Наступне заняття</string>
    <string name="tv_NextLessonNull">Заняття відсутнє</string>
    <string name="tv_TodayLessonNull">Занять немає</string>

    <!-- Days Fragment -->
    <string name="firstDay">Понеділок</string>
    <string name="secondDay">Вівторок</string>
    <string name="thirdDay">Середа</string>
    <string name="fourthDay">Четвер</string>
    <string name="fifthDay">Пятниця</string>
    <string name="sixthDay">Субота</string>

    <!-- ChangeDialog -->
    <string name="ChangeDialogTitle">Доки вас не було, дещо змінилось...</string>

    <!-- Settings Fragment -->
    <string name="tv_Group">Група</string>
    <string name="tv_Course">Курс</string>
    <string name="b_SaveSetting">Зберегти</string>

    <!-- LessonItem -->
    <string name="LessonStart">Початок</string>
    <string name="LessonEnd">Кінець</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Change List -->
    <string name="ChangeList_SubjectAdd">Додана нова дисципліна </string>
    <string name="ChangeList_SubjectUpdate">Оновлена дисципліна </string>
    <string name="ChangeList_SubjectDelete">Видалена дисципліна </string>
    <string name="ChangeList_TeacherAdd">Доданий новий викладач </string>
    <string name="ChangeList_TeacherUpdate">Оновлений викладач </string>
    <string name="ChangeList_TeacherDelete">Видалений викладач </string>
    <string name="ChangeList_LessonAdd">Додано нове заняття </string>
    <string name="ChangeList_LessonUpdate">Оновлено заняття </string>
    <string name="ChangeList_LessonDelete">Видалено заняття </string>
    <string name="ChangeList_WeekAdd">Додана нова неділя </string>
</resources>