<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <!-- Trash Fragment
        <item
            android:id="@+id/nav_all_lessons"
            android:icon="@drawable/ic_timetable"
            android:title="@string/menu_all_lessons"
             />
        -->
        <item
            android:id="@+id/nav_user_lessons"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_user_lessons" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_timetable"
            android:title="@string/menu_timetable" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/menu_setting" />
    </group>
</menu>