<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="smarttimetable.main.fragments.HomeIFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_all_lessons"
        android:name="smarttimetable.main.fragments.AllLessonsIFragment"
        android:label="@string/menu_all_lessons"
        tools:layout="@layout/fragment_all_lessons" />

    <fragment
        android:id="@+id/nav_user_lessons"
        android:name="smarttimetable.main.fragments.UserLessonsIFragment"
        android:label="@string/menu_user_lessons"
        tools:layout="@layout/fragment_user_lessons" />
</navigation>