<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserLessonsIFragment"
    android:background="@drawable/background_main">

    <Spinner
        android:id="@+id/sp_Week"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sp_Week" >

        <TextView
            android:id="@+id/tv_FirstDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/play"
            android:text="@string/firstDay"
            android:textAlignment="inherit"
            android:textColor="@color/WhiteForeground"
            android:textSize="26sp" />

        <ListView
            android:id="@+id/rv_FirstDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cacheColorHint="@color/colorAccent"

            android:divider="@color/LessonListDivider"
            android:dividerHeight="2px"/>

        <TextView
            android:id="@+id/tv_SecondDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/play"
            android:text="@string/secondDay"
            android:textAlignment="inherit"
            android:textColor="@color/WhiteForeground"
            android:textSize="26sp"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="141dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="112dp" />

        <ListView
            android:id="@+id/rv_SecondDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/LessonListDivider"
            android:dividerHeight="2px"/>

        <TextView
            android:id="@+id/tv_ThirdDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/play"
            android:text="@string/thirdDay"
            android:textAlignment="inherit"
            android:textColor="@color/WhiteForeground"
            android:textSize="26sp"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="104dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="225dp" />

        <ListView
            android:id="@+id/rv_ThirdDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/LessonListDivider"
            android:dividerHeight="2px"/>

        <TextView
            android:id="@+id/tv_FourthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fourthDay"
            android:textAlignment="inherit"
            android:textColor="@color/WhiteForeground"
            android:textSize="26sp"
            android:layout_marginTop="30dp"/>

        <ListView
            android:id="@+id/rv_FourthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/LessonListDivider"
            android:dividerHeight="2px"/>

        <TextView
            android:id="@+id/tv_FifthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/firstDay"
            android:textAlignment="inherit"
            android:textColor="@color/WhiteForeground"
            android:textSize="26sp"
            android:layout_marginTop="30dp"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="229dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="450dp" />

        <ListView
            android:id="@+id/rv_FifthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/LessonListDivider"
            android:dividerHeight="2px"/>

        <TextView
            android:id="@+id/tv_SixthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sixthDay"
            android:textAlignment="inherit"
            android:textColor="@color/WhiteForeground"
            android:textSize="26sp"
            android:layout_marginTop="30dp"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="138dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="562dp" />

        <ListView
            android:id="@+id/rv_SixthDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/LessonListDivider"
            android:dividerHeight="2px"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>